# reporadio

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md  main.py  pyproject.toml  test_google_drive.py
config/: repo_lists.py  settings.py
examples/: discovery_example.py
src/pr_pirate/: __init__.py
src/pr_pirate/discovery/: __init__.py  github_client.py  issue_discoverer.py  repo_discoverer.py
src/pr_pirate/llm/: __init__.py  issue_assessor.py
src/pr_pirate/models/: __init__.py  assessment.py  issue.py  repository.py
src/pr_pirate/notifications/: __init__.py  discord_webhook.py  google_drive.py
src/pr_pirate/templates/: __init__.py  audio_script_template.py
src/pr_pirate/tts/: __init__.py  replicate_tts.py
src/pr_pirate/utils/: database.py
