[project]
name = "reporadio"
version = "0.1.0"
description = "GitHub issue discovery with TTS audio summaries for your commute"
readme = "README.md"
authors = [{name = "RepoRadio"}]
requires-python = ">=3.11"
dependencies = [
    "pygithub>=2.6.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "aiohttp>=3.12.13",
    "click>=8.2.1",
    "python-dotenv>=1.0.0",
    "replicate>=0.20.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "dotenv>=0.9.9",
]

[project.scripts]
reporadio = "pr_pirate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_pirate"]

[tool.hatch.metadata]
allow-direct-references = true
